# auxdismdump

./: .gitignore  Cargo.toml  _auxtools.dm  _boilerplate.dm  instruction-test.dm  instruction-test.dme
src/: env.rs  lib.rs
